--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ControlateFront</title>
+  <meta name="description" content="App para el control de insulina y macronutrientes en tiempo real para diabeticos con insulina y sin insulina">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
